--- a/dcs_react/package.json
+++ b/dcs_react/package.json
@@ -13,7 +13,8 @@
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.28.0",
     "react-scripts": "5.0.1",
-    "remixicon": "^4.5.0"
+    "remixicon": "^4.5.0",
+    "swiper": "^11.1.14"
   },
   "scripts": {
     "start": "react-scripts start",
