파일작업완

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -14,7 +14,7 @@ spring:
       hibernate:
         format_sql: true
         jdbc:
-          time_zone: UTC  # Hibernate가 사용할 시간대 설정 (UTC)
+          time_zone: Asia/Seoul  # Hibernate가 사용할 시간대 설정 (UTC)
   
   resources:
     static-locations: classpath:/static/  # 정적 리소스 위치 설정
