--- a/dcs_react/package.json
+++ b/dcs_react/package.json
@@ -7,6 +7,7 @@
     "bootstrap": "^5.3.3",
     "cra-template": "1.2.0",
     "date-fns": "^4.1.0",
+    "lucide-react": "^0.456.0",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.5",
     "react-dom": "^18.3.1",
