--- a/dcs_react/package.json
+++ b/dcs_react/package.json
@@ -2,6 +2,7 @@
   "name": "dcs_react",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://jaekwon0316.github.io/dcsProject.github.io",
   "dependencies": {
     "axios": "^1.7.7",
     "bootstrap": "^5.3.3",
@@ -22,7 +23,6 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
-    
   },
   "eslintConfig": {
     "extends": [
@@ -41,5 +41,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.2.0"
   }
 }
