--- a/dcs_react/vercel.json
+++ b/dcs_react/vercel.json
@@ -1,13 +1,13 @@
 {
-    "headers": [
-      {
-        "source": "/(.*)",
-        "headers": [
-          {
-            "key": "Content-Security-Policy",
-            "value": "default-src 'self'; script-src 'self' *.kakao.com *.dapi.kakao.com; style-src 'self' 'unsafe-inline' *.googleapis.com *.kakao.com;"
-          }
-        ]
-      }
-    ]
-  }
+  "headers": [
+    {
+      "source": "/(.*)",
+      "headers": [
+        {
+          "key": "Content-Security-Policy",
+          "value": "default-src 'self'; script-src 'self' *.kakao.com *.dapi.kakao.com t1.daumcdn.net; style-src 'self' 'unsafe-inline' *.googleapis.com *.kakao.com;"
+        }
+      ]
+    }
+  ]
+}
