--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@ build/
 !gradle/wrapper/gradle-wrapper.jar
 !**/src/main/**/build/
 !**/src/test/**/build/
+/src/main/resources/application.yml
 ### STS ###
 .apt_generated
 .classpath
@@ -33,5 +34,6 @@ out/
 /.nb-gradle/
 
 .env
+
 ### VS Code ###
 .vscode/
